# ProjectsUpdates-CrewAI

./: README.md  analysis_results.json  pyproject.toml  requirements.txt
backend/: .gitignore  analysis_results.json  pyproject.toml  search_results.json
backend/output/: accumulated_analysis.json  analysis_results.json  analysis_results_Croatia.json  analysis_results_Lithuania.json  search_results.json
backend/src/: __init__.py  accumulator.py  crew.py  main.py
backend/src/config/: agents.yaml  logging_config.py  regions.py  tasks.yaml
frontend/: package-lock.json
frontend/app/: page.tsx
src/: crew.py  main.py
src/config/: agents.yaml  tasks.yaml
