[tool.poetry]
name = "ProjectUpdates-CrewAI"
version = "0.1.0"
description = "A CrewAI project for solar news analysis"
authors = ["Stas Masevych"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">3.10,<3.13"
crewai = {extras = ["tools"], version = "^0.102.0"}
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.10.6"
langchain-community = "^0.3.18"
firecrawl-py = "^1.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 